Test/hofs/ResolveError.dfy.expect
ResolveError.dfy(7,11): Error: the number of left-hand sides (1) and right-hand sides (2) must match for a multi-assignment
ResolveError.dfy(8,11): Error: the number of left-hand sides (1) and right-hand sides (2) must match for a multi-assignment
ResolveError.dfy(21,6): Error: LHS of assignment must denote a mutable field
ResolveError.dfy(31,16): Error: arguments must have the same type (got int and bool)
ResolveError.dfy(32,12): Error: wrong number of arguments to function application (function type 'int -> int' expects 1, got 2)
ResolveError.dfy(33,13): Error: type mismatch for argument 0 (function expects int, got bool)
ResolveError.dfy(34,13): Error: incorrect type of function argument 0 (expected int, got bool)
ResolveError.dfy(35,25): Error: arguments must have the same type (got bool and int)
ResolveError.dfy(36,13): Error: wrong number of function arguments (got 2, expected 1)
ResolveError.dfy(37,13): Error: incorrect type of function argument 0 (expected int, got bool)
ResolveError.dfy(38,22): Error: arguments must have the same type (got set<object> and int)
ResolveError.dfy(39,13): Error: wrong number of function arguments (got 2, expected 1)
ResolveError.dfy(46,15): Error: a reads-clause expression must denote an object or a collection of objects (instead got int)
ResolveError.dfy(47,7): Error: Precondition must be boolean (got int)
ResolveError.dfy(56,9): Error: condition is expected to be of type bool, but is () -> bool
ResolveError.dfy(59,34): Error: arguments must have the same type (got A -> B and ?)
ResolveError.dfy(62,11): Error: arguments must have the same type (got A -> B and object)
ResolveError.dfy(68,24): Error: unresolved identifier: _
18 resolution/type errors detected in ResolveError.dfy
